--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 .cv-19-i-need-help/.serverless/*
 
 cv-19-org-volunteers.sln.DotSettings.user
+/cv-19-i-need-help/.serverless/
+/cv-19-i-need-help/obj/
+/cv-19-i-need-help/obj/Debug/
