Added workflow steps.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,6 +16,7 @@ jobs:
       - run:
           name: Run tests
           command: dotnet test
+          
   deploy-dev:
     executor: dotnet-executor
     steps:
@@ -38,5 +39,19 @@ jobs:
       - run:
           name: Deploy application
           command: cd src/Lambda && ./build.sh && sls deploy -s dev
-  
-      
+
+  workflows:
+    version: 2
+    continuous-delivery:
+      jobs:
+        - build
+        - deploy-dev:
+            requires:
+              - build
+        - permit-deploy-production:
+            type: approval
+            requires:
+              - deploy-dev
+        - deploy-production:
+            requires:
+              - permit-deploy-production    
