--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,14 +31,11 @@ jobs:
           name: Install Serverless CLI
           command: npm i -g serverless
       - run:
-          name: NPM Install
-          command: cd src/Lambda && npm install
-      - run:
           name: Set AWS credentials
           command: serverless config credentials -p aws -k ${DEV_AWS_ACCESS_KEY_ID} -s ${DEV_AWS_SECRET_ACCESS_KEY} -n dev
       - run:
           name: Deploy application
-          command: cd src/Lambda && ./build.sh && sls deploy -s dev
+          command: cd cv-19-i-need-help && ./build.sh && sls deploy -s dev
           
   deploy-production:
     executor: dotnet-executor
@@ -54,14 +51,11 @@ jobs:
           name: Install Serverless CLI
           command: npm i -g serverless
       - run:
-          name: NPM Install
-          command: cd src/Lambda && npm install
-      - run:
           name: Set AWS credentials
           command: serverless config credentials -p aws -k ${PROD_AWS_ACCESS_KEY_ID} -s ${PROD_AWS_SECRET_ACCESS_KEY} -n production
       - run:
           name: Deploy application
-          command: cd src/Lambda && ./build.sh && sls deploy -s production
+          command: cd cv-19-i-need-help && ./build.sh && sls deploy -s production
 
 workflows:
   version: 2
