--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,19 @@ jobs:
       - attach_workspace:
           at: cv-19-i-need-help
       - run:
+          name: Install Node.js
+          command: |
+            curl -sL https://deb.nodesource.com/setup_13.x | bash -
+            apt-get install -y nodejs
+      - run:
+          name: Install Serverless CLI
+          command: npm i -g serverless
+      - run:
+          name: Set AWS credentials
+          command: serverless config credentials -p aws -k ${DEV_AWS_ACCESS_KEY_ID} -s ${DEV_AWS_SECRET_ACCESS_KEY} -n dev
+      - run:
           name: Deploy application
-          command: ls cv-19-i-need-help
+          command: cd cv-19-i-need-help && ./build.sh && sls deploy -s dev    
   deploy-production:
     executor: dotnet-executor
     steps:
