--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,11 @@ jobs:
           name: Set AWS credentials
           command: serverless config credentials -p aws -k ${DEV_AWS_ACCESS_KEY_ID} -s ${DEV_AWS_SECRET_ACCESS_KEY} -n dev
       - run:
+          name: Build application
+          command: cd cv-19-i-need-help && ./build.sh
+      - run:
           name: Deploy application
-          command: cd cv-19-i-need-help && ./build.sh && sls deploy -s dev    
+          command: serveless deploy -s dev
   deploy-production:
     executor: dotnet-executor
     steps:
@@ -55,8 +58,11 @@ jobs:
           name: Set AWS credentials
           command: serverless config credentials -p aws -k ${PROD_AWS_ACCESS_KEY_ID} -s ${PROD_AWS_SECRET_ACCESS_KEY} -n production
       - run:
+          name: Build application
+          command: cd cv-19-i-need-help && ./build.sh
+      - run:
           name: Deploy application
-          command: cd cv-19-i-need-help && ./build.sh && sls deploy -s production
+          command: serveless deploy -s production
 
 workflows:
   version: 2
