Cleared unnecessary test files.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 cv-19-i-need-help/bin/*
 cv-19-i-need-help/obj/*
 cv-19-i-need-help/.serverless/*
+cv-19-i-need-help-test/obj/*
 
 cv-19-org-volunteers.sln.DotSettings.user
 /cv-19-i-need-help/.serverless/
