--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ cv-19-i-need-help/bin/*
 cv-19-i-need-help/obj/*
 cv-19-i-need-help/.serverless/*
 cv-19-i-need-help-test/obj/*
+cv-19-i-need-help-test/bin/*
 
 cv-19-org-volunteers.sln.DotSettings.user
 /cv-19-i-need-help/.serverless/
