--- a/cv-19-i-need-help-test/cv-19-i-need-help-test.csproj
+++ b/cv-19-i-need-help-test/cv-19-i-need-help-test.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="FluentAssertions" Version="5.10.3" />
         <PackageReference Include="Moq" Version="4.13.1" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="NUnit" Version="3.12.0" />
