Added querystring parameter to filter master records only.

--- a/cv-19-i-need-help/serverless.yml
+++ b/cv-19-i-need-help/serverless.yml
@@ -20,6 +20,7 @@ functions:
             parameters:
               querystrings:
                 uprn: true,
+                master: false
           cors:
             origin: '*'
             headers:
