--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,6 +77,10 @@ workflows:
           type: approval
           requires:
             - deploy-dev
+          filters:
+            branches:
+              only:
+                - master
       - deploy-production:
           requires:
             - permit-deploy-production    
