return all record (annex dump) if no parameters are supplied)

--- a/cv-19-i-need-help/serverless.yml
+++ b/cv-19-i-need-help/serverless.yml
@@ -18,7 +18,7 @@ functions:
           request:
             parameters:
               querystrings:
-                uprn: true,
+                uprn: false,
                 master: false
           cors:
             origin: '*'
