Added postcode parameter to help request endpoint.

--- a/cv-19-i-need-help/serverless.yml
+++ b/cv-19-i-need-help/serverless.yml
@@ -19,7 +19,8 @@ functions:
             parameters:
               querystrings:
                 uprn: false,
-                master: false
+                master: false,
+                postcode: false,
           cors:
             origin: '*'
             headers:
