--- a/cv-19-i-need-help/cv-19-i-need-help.csproj
+++ b/cv-19-i-need-help/cv-19-i-need-help.csproj
@@ -12,11 +12,19 @@
     <PackageReference Include="Amazon.Lambda.APIGatewayEvents" Version="2.0.0" />
     <PackageReference Include="Amazon.Lambda.Core" Version="1.0.0" />
     <PackageReference Include="Amazon.Lambda.Serialization.Json" Version="1.3.0" />
+    <PackageReference Include="Google.Apis.Drive.v3" Version="1.45.0.1964" />
+    <PackageReference Include="Google.Apis.Sheets.v4" Version="1.45.0.1965" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.3" />
     <PackageReference Include="Moq" Version="4.13.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.3" />
     <PackageReference Include="NUnit" Version="3.12.0" />
+  </ItemGroup>
+  
+  <ItemGroup>
+    <Content Include="credentials.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <ItemGroup>
