--- a/cv-19-i-need-help-test/cv-19-i-need-help-test.csproj
+++ b/cv-19-i-need-help-test/cv-19-i-need-help-test.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoFixture" Version="4.11.0" />
         <PackageReference Include="FluentAssertions" Version="5.10.3" />
         <PackageReference Include="Google.Apis.Drive.v3" Version="1.45.0.1964" />
         <PackageReference Include="Google.Apis.Sheets.v4" Version="1.45.0.1965" />
