--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     image: test-database
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: database/Dockerfile
     ports:
       - 5432:5432
     env_file:
