--- a/cv-19-i-need-help/serverless.yml
+++ b/cv-19-i-need-help/serverless.yml
@@ -181,3 +181,27 @@ functions:
               - X-Amz-Security-Token
               - X-Amz-User-Agent
             allowCredentials: false
+  getHelpRequests-v2:
+    handler: CsharpHandlers::CV19INeedHelp.Boundary.V2.Handler::GetHelpRequests
+    package:
+      artifact: bin/release/netcoreapp2.1/cv-19-i-need-help.zip
+    events:
+      - http:
+          path: v2/help-requests
+          method: get
+          request:
+            parameters:
+              querystrings:
+                uprn: false,
+                master: false,
+                postcode: false
+          cors:
+            origin: '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+            allowCredentials: false
