Set environment variables from ssm parameter store

--- a/cv-19-i-need-help/serverless.yml
+++ b/cv-19-i-need-help/serverless.yml
@@ -2,8 +2,13 @@ service: cv-19-food-delivery
 provider:
   name: aws
   runtime: dotnetcore2.1
-  stage: dev
+  stage: ${opt:stage}
   region: eu-west-2
+  environment:
+    GOOGLE_DRIVE_AUTH_TOKEN: ${ssm:/i-need-help-api/${self:provider.stage}/google-auth-token}
+    GOOGLE_DRIVE_APPLICATION_NAME: ${ssm:/i-need-help-api/${self:provider.stage}/google-application-name}
+    DRIVE_UPLOAD_FOLDER_ID: ${ssm:/i-need-help-api/${self:provider.stage}/google-upload-folder}
+    CV_19_DB_CONNECTION: Host=${ssm:/i-need-help-api/${self:provider.stage}/db-hostname};Port=5432;Database=${ssm:/i-need-help-api/${self:provider.stage}/db-database;Username=${ssm:/i-need-help-api/${self:provider.stage}/db-username};Password=${ssm:/i-need-help-api/${self:provider.stage}/db-password}
 package:
   individually: true
 functions:
