--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ cv-19-i-need-help/obj/*
 cv-19-i-need-help/.serverless/*
 cv-19-i-need-help-test/obj/*
 cv-19-i-need-help-test/bin/*
+cv-19-i-need-help.sln.DotSettings.user
 
 cv-19-i-need-help-test/obj/Debug/netcoreapp2.1/cv-19-i-need-help-test.assets.cache
 cv-19-i-need-help-test/obj/Debug/netcoreapp2.1/cv-19-i-need-help-test.dll
