--- a/cv-19-i-need-help/serverless.yml
+++ b/cv-19-i-need-help/serverless.yml
@@ -51,6 +51,24 @@ functions:
               - X-Amz-Security-Token
               - X-Amz-User-Agent
             allowCredentials: false
+  getHelpRequestsSummary-v1:
+    handler: CsharpHandlers::CV19INeedHelp.Boundary.V1.Handler::GetHelpRequestsSummary
+    package:
+      artifact: bin/release/netcoreapp2.1/cv-19-i-need-help.zip
+    events:
+      - http:
+          path: help-requests/summary
+          method: get
+          cors:
+            origin: '*'
+            headers:
+              - Content-Type
+              - X-Amz-Date
+              - Authorization
+              - X-Api-Key
+              - X-Amz-Security-Token
+              - X-Amz-User-Agent
+            allowCredentials: false
   getHelpRequestExceptions-v1:
     handler: CsharpHandlers::CV19INeedHelp.Boundary.V1.Handler::GetHelpRequestExceptions
     package:
