--- a/cv-19-i-need-help/serverless.yml
+++ b/cv-19-i-need-help/serverless.yml
@@ -51,7 +51,7 @@ functions:
               - X-Amz-Security-Token
               - X-Amz-User-Agent
             allowCredentials: false
-  getHelpRequestsSummary-v1:
+  getHelpReqSummary-v1:
     handler: CsharpHandlers::CV19INeedHelp.Boundary.V1.Handler::GetHelpRequestsSummary
     package:
       artifact: bin/release/netcoreapp2.1/cv-19-i-need-help.zip
